--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
 		"@types/node": "^22.5.5",
 		"body-parser": "^1.20.3",
 		"express": "^4.21.0",
+		"js2xmlparser": "^5.0.0",
 		"soap": "^1.1.4",
 		"typescript": "^5.6.2"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^9.0.2",
 		"@types/body-parser": "^1.19.5",
 		"@types/express": "^4.17.21",
 		"copyfiles": "^2.4.1"
 	}
 }
-
