IMP: Re test and write readme

--- a/.gitignore
+++ b/.gitignore
@@ -169,4 +169,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://mrkandreev.name/snippets/gitignore-generator/#Node,macOS,Windows
+customer_files/
+policies*
